# gtest-examples

./: .gitignore  README.md  build.bat  build_mingw.bat
.btcep/: .btcep_req.btc  .btcep_reqSource.btc
examples/: requirements.xlsx
examples/seat-heater-c/: CMakeLists.txt
examples/seat-heater-c/src/: seat_heating_controller.h
examples/seat-heater-c/src/includes/: types.h
examples/seat-heater-c/tst/: test_seat_heating_controller.cpp
examples/seat-heater-cpp/: CMakeLists.txt
examples/seat-heater-cpp/include/: types.h
examples/seat-heater-cpp/src/: seat_heating_controller.cpp  seat_heating_controller.h
examples/seat-heater-cpp/tst/: test_seat_heating_controller.cpp
src/: seat_heating_controller.c  stub.c  stub_Typedef.h
tst/: test_seat_heating_controller.cpp
